# jack-vec

./: .gitignore  Cargo.toml  README.md  RELEASES.md  TODO.md
.github/workflows/: codspeed.yml  rust.yml
benches/: README.md  allocations.rs  cpu.rs
benches/support/: mod.rs
comparisons/: Cargo.toml  README.md
comparisons/benches/: allocations.rs  cpu.rs
comparisons/benchmark-results/: LATEST.md  README.md  linux-x86_64.json  linux-x86_64.md  macos-aarch64.json  macos-aarch64.md
comparisons/src/: lib.rs
comparisons/tools/: generate_report.py  pyproject.toml  run_matrix.py  test_generate_report.py  test_run_matrix.py  validate_pair.py
src/: lib.rs
tools/: bench_ab.py  test_bench_ab.py
