[package]
name = "jackvec"
version = "0.2.18"
authors = ["Aria Beingessner <a.beingessner@gmail.com>"]
edition = "2018"
rust-version = "1.86"
description = "A compact, high-performance one-word vector derived from ThinVec."
readme = "README.md"
homepage = "https://github.com/tomsanbear/thin-vec"
repository = "https://github.com/tomsanbear/thin-vec"
license = "MIT OR Apache-2.0"

[features]
unstable = []
default = ["std"]
std = []
const_new = []

[dependencies]
serde = { version = "1.0", optional = true }
malloc_size_of = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "=0.8.2"
serde_test = "1.0"

[[bench]]
name = "cpu"
harness = false

[[bench]]
name = "allocations"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_global_oom_handling)'] }
