[package]
name = "jack-vec"
version = "0.1.0"
publish = false
authors = ["Aria Beingessner <a.beingessner@gmail.com>"]
edition = "2018"
rust-version = "1.86"
description = "A compact, high-performance one-word vector derived from ThinVec."
readme = "README.md"
homepage = "https://github.com/moderately-ai/jack-vec"
repository = "https://github.com/moderately-ai/jack-vec"
license = "MIT OR Apache-2.0"
keywords = ["vec", "collection", "compact", "memory"]
categories = ["data-structures", "no-std"]
exclude = ["/.github", "/.gitignore", "/TODO.md", "/tools", "/benchmark-results"]

[workspace]
members = ["comparisons"]
default-members = ["."]
resolver = "2"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
malloc_size_of = ["dep:malloc_size_of"]
const_new = []
unstable = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
malloc_size_of = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "=0.8.2"
serde_test = "1.0"

[[bench]]
name = "cpu"
harness = false

[[bench]]
name = "allocations"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_global_oom_handling)'] }
